correção redirect novo blog

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<script>window.location.href = "http://smdlab.wordpress.com"</script>
+<script>window.location.href = "http://fnxlab.wordpress.com"</script>
